Prevent horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .app{
     background: #030712;
+    overflow-x: hidden;
 }
 
 .section-desc{
